--- a/MediatrDecorators/MediatrDecorators/MediatrDecorators.csproj
+++ b/MediatrDecorators/MediatrDecorators/MediatrDecorators.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FluentAssertions, Version=4.15.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentAssertions.4.15.0\lib\net45\FluentAssertions.dll</HintPath>
       <Private>True</Private>
@@ -177,9 +181,12 @@
     <Compile Include="Bar.cs" />
     <Compile Include="BarHandler.cs" />
     <Compile Include="BarValidator.cs" />
+    <Compile Include="Fizz.cs" />
+    <Compile Include="FizzHandler.cs" />
     <Compile Include="Foo.cs" />
     <Compile Include="FooHandler.cs" />
     <Compile Include="FooValidator.cs" />
+    <Compile Include="NullValidator.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidatingHandler.cs" />
