--- a/MediatrDecorators/MediatrDecorators/packages.config
+++ b/MediatrDecorators/MediatrDecorators/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.2.0" targetFramework="net462" />
   <package id="FluentAssertions" version="4.15.0" targetFramework="net462" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net462" />
   <package id="MediatR" version="2.1.0" targetFramework="net462" />
